Refactor: Mise à jour du fichier requirement.txt pour outils

--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = C:\Users\HP\AppData\Local\Programs\Python\Python312
+home = /usr/bin
 include-system-site-packages = false
-version = 3.12.0
-executable = C:\Users\HP\AppData\Local\Programs\Python\Python312\python.exe
-command = C:\Users\HP\AppData\Local\Programs\Python\Python312\python.exe -m venv C:\Users\HP\Desktop\4GI\IHM\PROJET IHM\XCSM_Backend\env
+version = 3.12.3
+executable = /usr/bin/python3.12
+command = /usr/bin/python3 -m venv /home/pc/Bureau/Django Projects/XCSM-IHM/XCSM_Backend/env
